feat:adicionada imagem de fundo na tela de detalhes do jogo

--- a/templates/game-card.html
+++ b/templates/game-card.html
@@ -1,78 +1,98 @@
 <section class="games-container">
-    {% for item in newJson["data"] %}
-    <div class="game-card">
-        <a href="/details/{{ item.id }}">
-            <img src="https:{{ item['cover']['url'] }}" id="cover" />
-        </a>
-        <h2>{{ item.name }}</h2>
-        <section>
-            <h3>Platforms</h3>
-            {% if item['platforms']|length %}
-            <ul class="platforms">
-                {% for platform in item["platforms"]%} {% if item["platforms"]|length >
-                6 %} {% if loop.index < 6 %} {% if platform["platform_logo"] %} <li>
-                    <img src='https:{{platform["platform_logo"]["url"]}}' alt="Game Platform Logo" />
-                    <p class="platform-name">{{platform['name']}}</p>
-                    </li>
-                    {% else %}
-                    <li>
-                        <img src="https://via.placeholder.com/300x200.png?text=Image+Not+Found"
-                            alt="Game Platform Logo" />
-                        <p class="platform-name">{{platform['name']}}</p>
-                    </li>
-                    {% endif %} {% else %} {% if platform["platform_logo"] %}
-                    <li style="display: none" id='B{{item["id"]}}'>
-                        <img src='https:{{platform["platform_logo"]["url"]}}' alt="Game Platform Logo" />
-                        <p class="platform-name">{{platform['name']}}</p>
-                    </li>
-                    {% else %}
-                    <li style="display: none" id='B{{item["id"]}}'>
-                        <img src="https://via.placeholder.com/300x200.png?text=Image+Not+Found"
-                            alt="Game Platform Logo" />
-                        <p class="platform-name">{{platform['name']}}</p>
-                    </li>
-                    {% endif %} {% endif %} {% else %} {% if platform["platform_logo"] %}
-                    <li>
-                        <img src='https:{{platform["platform_logo"]["url"]}}' alt="Game Platform Logo" />
-                        <p class="platform-name">{{platform['name']}}</p>
-                    </li>
-                    {% else %}
-                    <li>
-                        <img src="https://via.placeholder.com/300x200.png?text=Image+Not+Found"
-                            alt="Game Platform Logo" />
-                        <p class="platform-name">{{platform['name']}}</p>
-                    </li>
-                    {% endif %} {% endif %} {% endfor %} {% if item["platforms"]|length > 6
-                    %}
-                    <li class="show-all-platforms-li" id='A{{item["id"]}}' onclick="showAllPlatforms(this.id)">
-                        <button id="show-all-platforms">
-                            <i id="plus-sign" class="fi fi-br-plus"></i>
-                        </button>
-                        <p class="platform-name">Show more</p>
-                    </li>
-                    {% endif %}
-            </ul>
-            {% else %}
-            <p id="no-platforms-exception">
-                No platforms were registered for this game
-            </p>
-            {% endif %}
-        </section>
-        <h3>Rating</h3>
-        <section class="stars">
-            <div class="star-rating">
-                <img src="../static/img/Star_full.svg.png" alt="Full star" />
-                <img src="../static/img/Star_full.svg.png" alt="Full star" />
-                <img src="../static/img/Star_full.svg.png" alt="Full star" />
-                <img src="../static/img/Star_full.svg.png" alt="Full star" />
-                <img src="../static/img/Star_full.svg.png" alt="Full star" />
-            </div>
-        </section>
+  {% for item in newJson["data"] %}
+  <div class="game-card">
+    <a href="/details/{{ item.id }}">
+      <img src="https:{{ item['cover']['url'] }}" id="cover" />
+    </a>
+    <h2>{{ item.name }}</h2>
+    <section>
+      <h3>Platforms</h3>
+      {% if item['platforms']|length %}
+      <ul class="platforms">
+        {% for platform in item["platforms"]%} {% if item["platforms"]|length >
+        6 %} {% if loop.index < 6 %} {% if platform["platform_logo"] %}
+        <li>
+          <img
+            src='https:{{platform["platform_logo"]["url"]}}'
+            alt="Game Platform Logo"
+          />
+          <p class="platform-name">{{platform['name']}}</p>
+        </li>
+        {% else %}
+        <li>
+          <img
+            src="https://via.placeholder.com/300x200.png?text=Image+Not+Found"
+            alt="Game Platform Logo"
+          />
+          <p class="platform-name">{{platform['name']}}</p>
+        </li>
+        {% endif %} {% else %} {% if platform["platform_logo"] %}
+        <li style="display: none" id='B{{item["id"]}}'>
+          <img
+            src='https:{{platform["platform_logo"]["url"]}}'
+            alt="Game Platform Logo"
+          />
+          <p class="platform-name">{{platform['name']}}</p>
+        </li>
+        {% else %}
+        <li style="display: none" id='B{{item["id"]}}'>
+          <img
+            src="https://via.placeholder.com/300x200.png?text=Image+Not+Found"
+            alt="Game Platform Logo"
+          />
+          <p class="platform-name">{{platform['name']}}</p>
+        </li>
+        {% endif %} {% endif %} {% else %} {% if platform["platform_logo"] %}
+        <li>
+          <img
+            src='https:{{platform["platform_logo"]["url"]}}'
+            alt="Game Platform Logo"
+          />
+          <p class="platform-name">{{platform['name']}}</p>
+        </li>
+        {% else %}
+        <li>
+          <img
+            src="https://via.placeholder.com/300x200.png?text=Image+Not+Found"
+            alt="Game Platform Logo"
+          />
+          <p class="platform-name">{{platform['name']}}</p>
+        </li>
+        {% endif %} {% endif %} {% endfor %} {% if item["platforms"]|length > 6
+        %}
+        <li
+          class="show-all-platforms-li"
+          id='A{{item["id"]}}'
+          onclick="showAllPlatforms(this.id)"
+        >
+          <button id="show-all-platforms">
+            <i id="plus-sign" class="fi fi-br-plus"></i>
+          </button>
+          <p class="platform-name">Show more</p>
+        </li>
+        {% endif %}
+      </ul>
+      {% else %}
+      <p id="no-platforms-exception">
+        No platforms were registered for this game
+      </p>
+      {% endif %}
+    </section>
+    <h3>Rating</h3>
+    <section class="stars">
+      <div class="star-rating">
+        <img src="../static/img/Star_full.svg.png" alt="Full star" />
+        <img src="../static/img/Star_full.svg.png" alt="Full star" />
+        <img src="../static/img/Star_full.svg.png" alt="Full star" />
+        <img src="../static/img/Star_full.svg.png" alt="Full star" />
+        <img src="../static/img/Star_full.svg.png" alt="Full star" />
+      </div>
+    </section>
 
-        <h4 id="rating-number">({{"%.2f"|format(item.rating/20)}}/5.00)</h4>
-        <span style="font-size: 10px"> Based on {{item.rating_count}} votes </span>
+    <h4 id="rating-number">({{"%.2f"|format(item.rating/20)}}/5.00)</h4>
+    <span style="font-size: 10px"> Based on {{item.rating_count}} votes </span>
 
-        <a href="/details/{{ item.id }}"><button>Details</button></a>
-    </div>
-    {% endfor %}
+    <a href="/details/{{ item.id }}"><button>Details</button></a>
+  </div>
+  {% endfor %}
 </section>
