--- a/static/styles/game-card.css
+++ b/static/styles/game-card.css
@@ -271,10 +271,12 @@
     width: 90%;
   }
   #cover {
-    width: 95%;
+    width: 100%;
+    height: 100vw;
   }
-  #cover {
-    height: 110vw;
+  #cover:hover {
+    width: 100%;
+    height: 103vw;
   }
 }
 
