--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -45,22 +45,24 @@ input::-webkit-inner-spin-button {
 
 #intro {
   margin-top: 100px;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 40vh;
+  align-items: center;
 }
 
 #intro p {
   font-size: 1.5rem;
-  margin: 0 50px 30px 50px;
   line-height: 3rem;
 }
 #intro h3 {
   font-family: "Montserrat", sans-serif;
   font-size: 2.25rem;
-  width: 60%;
   justify-self: center;
   line-height: 4rem;
   margin: 0;
+  width: 100%;
 }
 
 @media only screen and (max-width: 700px) {
