--- a/templates/index.html
+++ b/templates/index.html
@@ -3,20 +3,27 @@ block content %}
 <h1>Welcome to Steam Verde!</h1>
 <div id="intro">
   <section>
-    <p>Our green-ish database features all your favorite games, from the latest releases to classic titles.
-    <p>Browse our collection, read reviews, and share your own ratings. Create an account to favorite games and add them
-      to
-      your wish list.</p>
-    <p> Stay connected with our community of gamers to stay up-to-date with the latest information. Start exploring now!
+    <p>
+      Our green-ish database features all your favorite games, from the latest
+      releases to classic titles.
+    </p>
+    <p>
+      Browse our collection, read reviews, and share your own ratings. Create an
+      account to favorite games and add them to your wish list.
+    </p>
+    <p>
+      Stay connected with our community of gamers to stay up-to-date with the
+      latest information. Start exploring now!
     </p>
   </section>
-
-  <h3>
-    Don't know where to start?
-    <br>
-    <br>
-    We recommend ou <a href="/top-games">best games tab</a> if you are looking for the best of the best!
-  </h3>
+  <section>
+    <h3>
+      Don't know where to start?
+      <br />
+      We recommend ou <a href="/top-games">best games tab</a> if you are looking
+      for the best of the best!
+    </h3>
+  </section>
 </div>
 
 {% endblock %}
