--- a/templates/game-card.html
+++ b/templates/game-card.html
@@ -91,8 +91,15 @@
 
     <h4 id="rating-number">({{"%.2f"|format(item.rating/20)}}/5.00)</h4>
     <span style="font-size: 10px"> Based on {{item.rating_count}} votes </span>
-
-    <a href="/details/{{ item.id }}"><button>Details</button></a>
+    <section id="game-card-buttons-section">
+      <a href="/details/{{ item.id }}"><button>Details</button></a>
+      <button class="button">
+        <i class="fi fi-rr-heart"></i>
+      </button>
+      <button class="button">
+        <i class="fi fi-rr-list"></i>
+      </button>
+    </section>
   </div>
   {% endfor %}
 </section>
