feat: changed image from 'artworks' to 'cover' on mobile devices, due to image's dimensions

--- a/static/styles/game-card.css
+++ b/static/styles/game-card.css
@@ -269,6 +269,7 @@
 @media only screen and (max-width: 415px) {
   .game-card {
     width: 90%;
+    height: auto;
   }
   #cover {
     width: 100%;
@@ -298,7 +299,7 @@
 #game-card-buttons-section {
   display: flex;
   justify-content: space-evenly;
-  width: 50%;
+  width: 210px;
 }
 #game-card-buttons-section .button {
   display: flex;
