--- a/templates/details.html
+++ b/templates/details.html
@@ -29,7 +29,7 @@ background-position: 50% 10%;"
       <br />
       <h1>{{ newJson["data"][0].name }}</h1>
 
-      <!-- //TODO -->
+      <!-- //TODO Adicionar informações da aba detalhes! -->
 
       <div>
         <section>
