--- a/templates/top-games.html
+++ b/templates/top-games.html
@@ -7,7 +7,7 @@ block content %}
   <form id="rating_count_form" action="/top-games" method="get">
     <div class="form-container">
       <h5 id='filter-info'>Filters*
-        <span class="tooltip">If no values were informed when the "filter" button is clicked, the default
+        <span class="filters-tooltip">If no values were informed when the "filter" button is clicked, the default
           values of filter will be those of the placeholders </span>
       </h5>
       <div style="display: none;">
