--- a/templates/search.html
+++ b/templates/search.html
@@ -12,9 +12,9 @@
       <div class="form-container">
         <h5 id="filter-info">
           Filters*
-          <span class="tooltip"
-            >If no values were informed when the "filter" button is clicked, the
-            default values of filter will be those of the placeholders
+          <span class="filters-tooltip"
+            >Ifs no values were informed when the "filter" button is clicked,
+            the default values of filter will be those of the placeholders
           </span>
         </h5>
         <div style="display: none">
