--- a/templates/layout.html
+++ b/templates/layout.html
@@ -108,6 +108,10 @@
       rel="stylesheet"
       href="https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css"
+    />
   </head>
 
   <body>
@@ -216,7 +220,14 @@
     </main>
     <footer class="page-footer">
       <div class="footer-copyright" id="footer-copyright">
-        <div>© 2023 Steam Verde</div>
+        <div>
+          <p>Steam Verde © 2023</p>
+          <p id="credits">
+            All game's data is from
+
+            <a href="https://igdb.com">IGDB</a>
+          </p>
+        </div>
       </div>
     </footer>
 
