--- a/static/styles/footer.css
+++ b/static/styles/footer.css
@@ -16,3 +16,22 @@ main {
 #footer-copyright {
   justify-content: center;
 }
+#footer-copyright div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#footer-copyright div a {
+  color: rgb(50, 58, 69);
+}
+
+#footer-copyright div a:hover {
+  -webkit-text-stroke-width: 0.7px;
+  -webkit-text-stroke-color: #0e1f00;
+  color: rgb(4, 27, 63);
+}
+
+#credits {
+  font-size: 2px;
+}
