--- a/templates/game-card.html
+++ b/templates/game-card.html
@@ -100,17 +100,25 @@
       >
       {% if item["isFavorite"] %}
       <a>
-        <button style="color: #a12d2d">
-          <i class="fi fi-sr-heart"></i>
-          <span class="buttons-tooltip">Remove from favorites</span>
-        </button>
+        <form action="{{ url_for('removeFavorite')}}" method="POST">
+          <input type="hidden" name="game_id" value="{{ item['id'] }}">
+          <input type="hidden" name="root_url" value="{{ request.path }}">
+          <button style="color: #a12d2d">
+            <i class="fi fi-sr-heart"></i>
+            <span class="buttons-tooltip">Remove from favorites</span>
+          </button>
+        </form>
       </a>
       {%else%}
       <a>
-        <button>
-          <i class="fi fi-rr-heart"></i>
-          <span class="buttons-tooltip">Add to favorites</span>
-        </button>
+        <form action="{{ url_for('addFavorite')}}" method="POST">
+          <input type="hidden" name="game_id" value="{{ item['id'] }}">
+          <input type="hidden" name="root_url" value="{{ request.path }}">
+          <button>
+            <i class="fi fi-rr-heart"></i>
+            <span class="buttons-tooltip">Add to favorites</span>
+          </button>
+        </form>
       </a>
       {% endif %} {% if item["isWished"] %}
       <a>
