wip: button change

--- a/templates/game-card.html
+++ b/templates/game-card.html
@@ -148,7 +148,10 @@
       xhr.onload = function () {
         button.disabled = false; // re-enable button
         if (xhr.status === 200) {
-          location.reload();
+          button.setAttribute("onclick", "removeFromFavorites(this)");
+          button.setAttribute("data-tooltip", "Remove from favorites");
+          button.style.color = "#a12d2d";
+          button.innerHTML = '<i class="fi fi-sr-heart"></i>';
         } else {
           alert("Error adding item to favorites!");
         }
@@ -167,7 +170,14 @@
       xhr.onload = function () {
         button.disabled = false; // re-enable button
         if (xhr.status === 200) {
-          location.reload();
+          button.style.color = "#fff"; // set color back to white
+          button.setAttribute("onclick", "addToFavorites(this)"); // set original onclick function
+          button.setAttribute("data-tooltip", "Add to favorites"); // set original tooltip text
+          button.dataset.action = "add"; // set dataset action back to "add"
+          button.innerHTML = `
+    <i class="fi fi-rr-heart"></i>
+    <span class="buttons-tooltip">Add to favorites</span>
+  `; // set original button HTML content
         } else {
           alert("Error removing item to favorites!");
         }
