feat: added favorites and wishlist tabs. added session to gitignore

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -138,6 +138,18 @@
           </li>
           {% if session.get("username") %}
           <li>
+            <a href="/favorites">
+              <i class="material-icons left">view_module</i>
+              Favorites
+            </a>
+          </li>
+          <li>
+            <a href="/wishlist">
+              <i class="material-icons left">view_module</i>
+              Wishlist
+            </a>
+          </li>
+          <li>
             <a href="/logout">
               <i class="material-icons left">view_module</i>
               Logout
