--- a/templates/search.html
+++ b/templates/search.html
@@ -52,64 +52,19 @@
   {% include 'game-card.html' %}
 </div>
 
+<script src="{{ url_for('static', filename='scripts/cards-containers.js') }}"></script>
 <script>
   // <!-- Star rating script-->
   //captures the json sent from python
   const json = JSON.parse("{{newJson|tojson}}");
-  const starRatings = document.querySelectorAll(".rating");
+  const starRatings = document.querySelectorAll(".star-rating");
   //for each game, gets the rating (in base 100) from the json, calculates the width of the stars based on this rating, and sets the style of the star-rating div based on it
   for (let i = 0; i < starRatings.length; i++) {
-    if (json.data[i].rating) {
-      const rating = json.data[i].rating.toFixed(2);
-      //math explanation: each star has 25px; the number comes in base 100(i used toFixed(2) to avoid desnecessary math), but the stars are base 5; to turn to base 100 for base 5, the rating is divided by 20 and multipled by 25 witch is the star width.
-      //E.G: if rating = 50, 40/20 = 2 * 25 = 50px of the div will be displayed. That ensures that stars are very precise.
-      const starWidth = (rating / 20) * 25;
-      starRatings[i].style.width = `${starWidth}px`;
-    }
-  }
-
-  // <!-- Platforms script for "show more" button-->
-  //when clicked, a show more button calls this function with "this.id" as param
-  function showAllPlatforms(clicked_id) {
-    //captures the <li> and <button> of the game, based on the id
-    //the id's are ordered by "A + item.id" for <li> and "B + item.id" for <button>
-    const platformListItems = document.querySelectorAll(
-      `#${clicked_id.replace("A", "B")}`
-    );
-    const platformButtonShow = document.querySelector(`#${clicked_id}`);
-
-    //iterates over all li's of the game, transforming their display from 'none' to 'flex'
-    for (each of platformListItems) each.style.display = "flex";
-
-    //transforms 'show-more-button' display from 'flex' to 'none'
-    platformButtonShow.style.display = "none";
-
-    //creates a new <li> (show-less-button li), appends html to it, gives it an 'onclick' event that reverts the action above and
-    const newEl = document.createElement("li");
-    newEl.innerHTML = `<button id = 'hide-all-platforms'><i id='plus-sign' class="fi fi-br-plus"></i></button><p class="platform-name">Show less</p> `;
-    newEl.onclick = () => {
-      for (each of platformListItems) each.style.display = "none";
-      platformButtonShow.style.display = "flex";
-      newEl.style.display = "none";
-    };
-
-    //appends the 'show less button li' to the last <li> of the game.
-    platformListItems[platformListItems.length - 1].after(newEl);
-  }
-  function showFilters(button) {
-    const rating_count_form = document.querySelector("#rating_count_form");
-    rating_count_form.style.display = "flex";
-    button.blur();
-    button.innerText = "Hide filters";
-    button.setAttribute("onclick", "hideFilters(this)");
-  }
-
-  function hideFilters(button) {
-    const rating_count_form = document.querySelector("#rating_count_form");
-    rating_count_form.style.display = "none";
-    button.blur();
-    button.innerText = "Show filters";
-    button.setAttribute("onclick", "showFilters(this)");
+    const rating = json.data[i].rating.toFixed(2);
+    //math explanation: each star has 25px; the number comes in base 100(i used toFixed(2) to avoid unnecessary math), but the stars are base 5; to turn to base 100 for base 5, the rating is divided by 20 and multiplied by 25 witch is the star width.
+    //E.G: if rating = 40, 40/20 = 2 * 25 = 50px/125px(40%) of the div will be displayed. That ensures that stars are very precise.
+    const starWidth = (rating / 20) * 25;
+    starRatings[i].style.width = `${starWidth}px`;
   }
 </script>
 {% endblock %}
