--- a/templates/top-games.html
+++ b/templates/top-games.html
@@ -29,17 +29,16 @@ block content %}
     <button onclick="showFilters(this)">Show filters</button>
   </div>
 </div>
-{% include 'game-card.html' %}
+{% include 'game-card.html'%}
 </div>
 
+
+<script src="{{ url_for('static', filename='scripts/cards-containers.js') }}"></script>
 <script>
   // <!-- Star rating script-->
-
   //captures the json sent from python
   const json = JSON.parse('{{newJson|tojson}}');
-
   const starRatings = document.querySelectorAll(".star-rating");
-
   //for each game, gets the rating (in base 100) from the json, calculates the width of the stars based on this rating, and sets the style of the star-rating div based on it
   for (let i = 0; i < starRatings.length; i++) {
     const rating = json.data[i].rating.toFixed(2)
@@ -48,48 +47,6 @@ block content %}
     const starWidth = rating / 20 * 25;
     starRatings[i].style.width = `${starWidth}px`;
   }
-
-  // <!-- Platforms script for "show more" button-->
-
-  //when clicked, a show more button calls this function with "this.id" as param 
-  function showAllPlatforms(clicked_id) {
-    //captures the <li> and <button> of the game, based on the id 
-    //the id's are ordered by "A + item.id" for <li> and "B + item.id" for <button>
-    const platformListItems = document.querySelectorAll(`#${clicked_id.replace("A", "B")}`);
-    const platformButtonShow = document.querySelector(`#${clicked_id}`);
-
-    for (each of platformListItems) each.style.display = "flex";
-    platformButtonShow.style.display = "none";
-
-    //creates a new <li> (show-less-button li), appends html to it, gives it an 'onclick' event that reverts the action above and 
-    const newEl = document.createElement("li");
-    newEl.innerHTML = `<button id = 'hide-all-platforms'><i id='plus-sign' class="fi fi-br-plus"></i></button><p class="platform-name">Show less</p> `
-    newEl.onclick = () => {
-      for (each of platformListItems) each.style.display = "none";
-      platformButtonShow.style.display = "flex";
-      newEl.style.display = 'none'
-    }
-
-    //appends the 'show less button li' to the last <li> of the game. 
-    platformListItems[platformListItems.length - 1].after(newEl);
-  }
-
-  function showFilters(button) {
-    const rating_count_form = document.querySelector("#rating_count_form");
-    rating_count_form.style.display = "flex";
-    button.blur();
-    button.innerText = "Hide filters";
-    button.setAttribute("onclick", "hideFilters(this)");
-  }
-
-  function hideFilters(button) {
-    const rating_count_form = document.querySelector("#rating_count_form");
-    rating_count_form.style.display = "none";
-    button.blur();
-    button.innerText = "Show filters";
-    button.setAttribute("onclick", "showFilters(this)");
-  }
-
 </script>
 
 {% endblock %}
