--- a/static/styles/game-card.css
+++ b/static/styles/game-card.css
@@ -103,7 +103,8 @@
   padding-top: 5%;
   border-radius: 2px;
   width: 420px;
-  height: 900px;
+  min-height: 900px;
+  max-height: auto;
   text-align: center;
   padding-bottom: 30px;
 }
