Set new password

--- a/templates/forgot-password.html
+++ b/templates/forgot-password.html
@@ -2,8 +2,9 @@
 <div class="container">
     <h1>Recover Password</h1>
     <div class="form-box">
+        <!-- Se o recover code não tiver sido enviado, aparece o input de email -->
         {% if not code_sent %}
-            <form action="{{ url_for('forgotPassword')}}" method="POST">
+            <form action="{{ url_for('forgotPassword') }}" method="POST">
                 <div class="input-field">
                     <label for="email"><b>Email</b></label>
                     <input id="email" type="text" name="email" value="{{ request.form['email'] }}">
@@ -11,15 +12,14 @@
                 <p class="spacing" style="color: lightslategray; font-size: 14px;">* We will send you a code so you can recover your password</p>
                 <button type="submit">Send email</button>
             </form>
+        <!-- Se não, mostra o input para o código de recuperação -->
         {% else %}
-            <form action="{{ url_for('setNewPassword')}}" method="POST">
+            <form action="{{ url_for('forgotPassword') }}" method="POST">
                 <div class="input-field">
                     <label for="recover-code"><b>Recover Code</b></label>
                     <input id="recover-code" type="text" name="recover-code" value="{{ request.form['recover-code'] }}">
                 </div>
                 <button type="submit">Confirm code</button>
-            </div>
-        
             </form>
         {% endif %}
     </div>
