--- a/templates/set-new-password.html
+++ b/templates/set-new-password.html
@@ -2,7 +2,7 @@
 <div class="container">
     <h1>Set New Password</h1>
     <div class="form-box">
-        <form action="{{ url_for('setNewPassword')}}" method="POST">
+        <form action="{{ url_for('setPassword')}}" method="POST">
       
             <div class="input-field">
               <label for="password"><b>New Password</b></label>
