--- a/templates/layout.html
+++ b/templates/layout.html
@@ -119,6 +119,27 @@
   </head>
 
   <body>
+    <!-- Dropdown Structure -->
+    <ul id="dropdown" class="dropdown-content">
+      {% if session.get("username") %}
+      <li>
+        <a href="#"> Profile </a>
+      </li>
+      <li>
+        <a href="#"> Change password </a>
+      </li>
+      <li>
+        <a href="/logout"> Logout </a>
+      </li>
+      {% else %}
+      <li>
+        <a href="/login"> Login </a>
+      </li>
+      <li>
+        <a href="/register"> Register </a>
+      </li>
+      {% endif %}
+    </ul>
     <nav>
       <div class="nav-wrapper">
         <a href="/">
@@ -133,46 +154,62 @@
           ><i class="material-icons">menu</i></a
         >
 
-        <ul class="right hide-on-med-and-down">
-          <li>
-            <a href="/top-games">
-              <i class="material-icons left">view_module</i>
-              List of top games
-            </a>
-          </li>
+        <ul
+          class="right hide-on-med-and-down"
+          id="links"
+          style="margin-right: 50px"
+        >
           {% if session.get("username") %}
           <li>
             <a href="/favorites">
-              <i class="material-icons left">view_module</i>
+              <i class="material-icons left"><i class="fi fi-rr-heart"></i></i>
               Favorites
             </a>
           </li>
           <li>
             <a href="/wishlist">
-              <i class="material-icons left">view_module</i>
+              <i class="material-icons left"><i class="fi fi-rr-list"></i></i>
               Wishlist
             </a>
           </li>
-          <li>
-            <a href="/logout">
-              <i class="material-icons left">view_module</i>
-              Logout
-            </a>
-          </li>
-          {% else %}
-          <li>
-            <a href="/login">
-              <i class="material-icons left">view_module</i>
-              Login
-            </a>
-          </li>
-          <li>
-            <a href="/register">
-              <i class="material-icons left">view_module</i>
-              Register
-            </a>
-          </li>
           {% endif %}
+          <li>
+            <a href="/top-games">
+              <i class="material-icons left"
+                ><i class="fi fi-rr-trophy-star"></i
+              ></i>
+              Best rated
+            </a>
+          </li>
+          <li>
+            <a href="/top-games">
+              <i class="material-icons left">
+                <i class="fi fi-rr-time-fast"></i>
+              </i>
+              Latest released
+            </a>
+          </li>
+          <li>
+            <a href="/top-games">
+              <i class="material-icons left">
+                <i class="fi fi-rr-calendar"></i>
+              </i>
+              Coming soon
+            </a>
+          </li>
+          <li>
+            <a class="dropdown-trigger" data-target="dropdown">
+              <i
+                class="fi fi-rr-user"
+                style="
+                  font-size: 36px;
+                  display: flex;
+                  align-items: center;
+                  margin: 0 10px;
+                "
+              ></i>
+            </a>
+          </li>
         </ul>
 
         <ul class="sidenav" id="mobile-demo">
@@ -192,7 +229,9 @@
           </li>
           <li>
             <a href="/top-games">
-              <i class="material-icons left">view_module</i>
+              <i class="material-icons left"
+                ><i class="fi fi-rr-trophy-star"></i
+              ></i>
               List of top games
             </a>
           </li>
@@ -248,5 +287,10 @@
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script>
+      $(document).ready(function () {
+        $(".dropdown-trigger").dropdown();
+      });
+    </script>
   </body>
 </html>
