--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -4,9 +4,12 @@
   font-family: "Montserrat", sans-serif;
 }
 
+html, body {
+  height: 100%; /* Set the height of the HTML and body elements to 100% */
+}
+
 html {
   width: 100%;
-  height: 100%;
 }
 
 .container {
