--- a/templates/404.html
+++ b/templates/404.html
@@ -1,19 +1,17 @@
-{% extends "layout.html" %} {% block title %} You look lost, child {% endblock
+{% extends "layout.html" %} {% block title %} 404 {% endblock
 %} {% block content %}
-<div
-  style="background-image: url({{ url_for('static', filename='img/game-over.png') }}); height: 100vh"
+<div id="page404" style="background-image: url({{ url_for('static', filename='img/game-over.png') }}); background-repeat: no-repeat; background-size: cover;   height: 100%;"
 >
-  <div
-    style="text-align: center"
-    style="background-color: rgba(27, 41, 57, 0.86)"
-  >
-    <img src="/static/images/404-mario.png" alt="Mario 404 Error" />
-    <h1>Looks like Princess Peach is in another castle!</h1>
+  <div>
+    <h1> <span>      404    </span>     - Not Found</h1>
+  <h2 >Oh no! Looks like Princess Peach is in another castle!</h2>
     <p>
       Sorry, but the page you're looking for isn't here. Please check the URL or
-      try searching again.
+      <a href="/">return to Homepage!</a>.
     </p>
-    <a href="/">Return to Homepage!</a>
+    
+
+    
   </div>
 </div>
 {% endblock %}
