--- a/templates/layout.html
+++ b/templates/layout.html
@@ -90,6 +90,11 @@
       type="text/css"
       href="{{ url_for('static', filename='styles/social-logins.css') }}"
     />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{{ url_for('static', filename='styles/404.css') }}"
+    />
 
     <!-- Jquery scripts -->
     <script src="{{ url_for('static', filename='scripts/jquery.js') }}"></script>
@@ -102,6 +107,7 @@
       href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Montserrat&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 
     <!-- FI icons -->
     <link
