Finalizando recuperar senha via pagina de login

--- a/templates/forgot-password.html
+++ b/templates/forgot-password.html
@@ -14,7 +14,7 @@
             </form>
         <!-- Se não, mostra o input para o código de recuperação -->
         {% else %}
-            <form action="{{ url_for('forgotPassword') }}" method="POST">
+            <form action="{{ url_for('setPassword') }}" method="GET">
                 <div class="input-field">
                     <label for="recover-code"><b>Recover Code</b></label>
                     <input id="recover-code" type="text" name="recover-code" value="{{ request.form['recover-code'] }}">
